# midiflow-py-demo

./: .gitignore  AGENTS.md  PLAN.md  README.md  pyproject.toml
.claude/skills/uv-package-test/: SKILL.md
src/midiflow/: __init__.py  flow.py  modifier.py  pattern.py  timeline.py
tests/: test_flow.py  test_pattern.py  test_play.py
