[project]
name = "midiflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sun123zxy", email = "sun123zxy@qq.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mido[ports-rtmidi]>=1.3.3",
    "pydantic>=2.12.5",
    "sortedcontainers-pydantic>=2.0.0",
]

[project.scripts]
midiflow = "midiflow:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
